--- a/heterogeneous_graphs.ipynb
+++ b/heterogeneous_graphs.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMWU66ZCrPJ984NaJZ1pA1J",
+      "authorship_tag": "ABX9TyNkAxb0vl7fuTWf4JpjAH3F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,13 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/bearbearyu1223/Graph-Neural-Network-Study-Notes/blob/main/heterogeneous_graphs.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "uP1vJ_bYiT0f"
+      }
     },
     {
       "cell_type": "markdown",
@@ -424,8 +431,8 @@
     {
       "cell_type": "code",
       "source": [
-        "def get_nodes_per_type(hete): \n",
-        "  pass"
+        "# def get_nodes_per_type(hete): \n",
+        "#   pass"
       ],
       "metadata": {
         "id": "sVxwJIWTbe9e"
@@ -436,8 +443,8 @@
     {
       "cell_type": "code",
       "source": [
-        "def get_num_message_edges(hete):\n",
-        "  pass"
+        "# def get_num_message_edges(hete):\n",
+        "#   pass"
       ],
       "metadata": {
         "id": "oQmxfVCsbpVF"
