--- a/heterogeneous_graphs.ipynb
+++ b/heterogeneous_graphs.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOGq7Kq26IEkjjRT/SfJwro",
+      "authorship_tag": "ABX9TyOmna/Zcqp/gWQPNNCYqy/P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -437,11 +437,11 @@
         "print(\"Node Type n1 has {} nodes\".format(num_nodes_n1))"
       ],
       "metadata": {
-        "id": "UPpd3G-egZoq",
-        "outputId": "6141333c-df9f-47af-aca7-0e65d7968edc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "UPpd3G-egZoq",
+        "outputId": "6141333c-df9f-47af-aca7-0e65d7968edc"
       },
       "execution_count": 24,
       "outputs": [
@@ -478,11 +478,11 @@
         "  print(\"Message type {} has {} edges\".format(message_type, num_edges)) "
       ],
       "metadata": {
-        "id": "U30R50zKgynA",
-        "outputId": "63dba7d0-106b-4b83-f551-71367ccc4963",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "U30R50zKgynA",
+        "outputId": "63dba7d0-106b-4b83-f551-71367ccc4963"
       },
       "execution_count": 26,
       "outputs": [
@@ -536,11 +536,11 @@
         "  print(\"{} dataset has {} nodes\".format(dataset_name, num_nodes))"
       ],
       "metadata": {
-        "id": "zO94w45Jo87f",
-        "outputId": "60e2d2a8-9a0b-41fa-cfc8-4bc1bd468175",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zO94w45Jo87f",
+        "outputId": "60e2d2a8-9a0b-41fa-cfc8-4bc1bd468175"
       },
       "execution_count": 28,
       "outputs": [
@@ -571,12 +571,12 @@
         "    show()"
       ],
       "metadata": {
-        "id": "0qWcTibRq8Ti",
-        "outputId": "05faa15f-8338-4fdc-bb3f-d30d3464368a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "0qWcTibRq8Ti",
+        "outputId": "05faa15f-8338-4fdc-bb3f-d30d3464368a"
       },
       "execution_count": 32,
       "outputs": [
@@ -730,7 +730,7 @@
         " * $h^{l-1}_u$ is the hidden embedding representation for the node `u` after the $(l-1)^{th}$ `HeteroGNNWrapperConv` layer.\n",
         " * $N_m(v)$ is the set of neighbor source nodes `s` for the node `v` that we are embeding along message type `m = (s, r, d)`. \n",
         "\n",
-        " *Note*: each weight/linear transformation matrix listed above is associated with a specific message type `[m]` and additionally, the matrix applied to node messages are differentiated by node type (e.g., $W^{(l)[m]}_d$ and $W^{(l)[m]}_s$). \n",
+        "**Note**: each weight/linear transformation matrix listed above is associated with a specific message type `[m]` and additionally, the matrix applied to node messages are differentiated by node type (e.g., $W^{(l)[m]}_d$ and $W^{(l)[m]}_s$). \n",
         "\n",
         " Lastfly, we will use mean aggregation for `AGG` where\n",
         "\n",
@@ -746,7 +746,22 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class HeteroGNNConv(pyg_nn.MessagePassing):\n",
+        "  def __init__(self, in_channels_src, in_channels_dst, out_channels): \n",
+        "    super().__init__(aggr=\"mean\")\n",
+        "\n",
+        "    self.in_channels_src = in_channels_src\n",
+        "    self.in_channels_dst = in_channels_dst\n",
+        "    self.out_channels = out_channels\n",
+        "\n",
+        "    self.lin_dst = nn.Linear(self.in_channels_src, self.out_channels)\n",
+        "    self.lin_src = nn.Linear(self.in_channels_dst, self.out_channels)\n",
+        "    self.lin_update = nn.Linear(2 * self.out_channels, self.out_channels)\n",
+        "  \n",
+        "  def forward(self, node_feature_src, node_feature_dst, edge_index, size=None):\n",
+        "    pass"
+      ],
       "metadata": {
         "id": "tP6uxCOf8a8Y"
       },
