--- a/heterogeneous_graphs.ipynb
+++ b/heterogeneous_graphs.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOmna/Zcqp/gWQPNNCYqy/P",
+      "authorship_tag": "ABX9TyNnN60rwVGBSc2gHBsv49ab",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -704,7 +704,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Impletement the `HeteroGNNConv`\n",
+        "### Impletement the `HeteroGNNConv` Layer\n",
         "At a high-level, the `HeteroGNNConv` layer is equivalent to the homogenous GNN layers, but now applied to an individual heterogeous message type. Moreover, our heterogenous GNN layer draws directly from the *GraphSAGE* message passing model introduced in ([Hamilton et al. (2017)](https://arxiv.org/abs/1706.02216)).\n",
         "\n",
         "Define the `HeteroGNNConv` layer with respect to message type `m`:\n",
@@ -760,13 +760,170 @@
         "    self.lin_update = nn.Linear(2 * self.out_channels, self.out_channels)\n",
         "  \n",
         "  def forward(self, node_feature_src, node_feature_dst, edge_index, size=None):\n",
-        "    pass"
+        "    return self.propagate(\n",
+        "        edge_index = edge_index, \n",
+        "        node_feature_src = node_feature_src, \n",
+        "        node_feature_dst= node_feature_dst, \n",
+        "        size = size, \n",
+        "        res_n_id = None, \n",
+        "    )\n",
+        "  \n",
+        "  def message_and_aggregate(self, edge_index, node_feature_src):\n",
+        "    out = matmul(edge_index, node_feature_src, reduce=\"mean\")\n",
+        "    return out\n",
+        "\n",
+        "  def update(self, aggr_out, node_feature_dst): \n",
+        "    dst_out = self.lin_dst(node_feature_dst)\n",
+        "    aggr_out = self.lin_src(aggr_out)\n",
+        "    aggr_out = torch.cat([dst_out, aggr_out], -1)\n",
+        "    aggr_out = self.lin_update(aggr_out)\n",
+        "    return aggr_out\n"
       ],
       "metadata": {
         "id": "tP6uxCOf8a8Y"
       },
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Implement `HeterogenousCNNWraper` Layer\n",
+        "\n",
+        "After implementing the `HeteroGNNConv` layer for each message type, we need to aggregate the node embedding results with respect to each message type for each node. \n",
+        "\n",
+        "The first approach is simply `mean` aggregation over message types: \n",
+        "\n",
+        "$\\begin{equation}h^{l}_v = \\frac{1}{M}\\sum_{m=1}^{M}h^{(l)[m]}_v\\end{equation}$\n",
+        "\n",
+        "The second approach is semantic level attention introduced in ([Wang et al.(2019)](https://arxiv.org/abs/1903.07293)), which use attention to learn which message type result is more important, then aggregate across all the message types: \n",
+        "\n",
+        "$\\begin{equation}e_m = \\frac{1}{V_d}\\sum_{v\\in V_d}q^{(l)T}_{attn}\\cdot tanh\\big(W^{(l)}_{attn}\\cdot h^{(l)[m]}_v +b\\big)\\end{equation}$\n",
+        "\n",
+        "where the unnormalized attention weight $e_m$ is a scalar computed fro each message type $m$, which can be further used to compute the normalized attention weights and update $h^{(l)}_v$:\n",
+        "\n",
+        "$\\begin{equation}\\alpha_m = \\frac{exp(e_m)}{\\sum_{m=1}^{M}exp(e_m)}\\end{equation}$\n",
+        "\n",
+        "$\\begin{equation}h^{(l)}_v = \\sum_{m=1}^{M}\\alpha_m \\cdot h^{(l)[m]}\\end{equation}$"
+      ],
+      "metadata": {
+        "id": "MvTt0UCXVDGn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class HeteroGNNWrapperConv(deepsnap.hetero_gnn.HeteroConv):\n",
+        "  def __init__(self, convs, args, aggr=None):\n",
+        "    super(HeteroGNNWrapperConv, self).__init__(convs, None)\n",
+        "    self.aggr = aggr\n",
+        "    \n",
+        "    self.mapping = {}\n",
+        "\n",
+        "    self.alpha = None\n",
+        "\n",
+        "    self.attn_proj = None\n",
+        "\n",
+        "    if self.aggr == \"attn\":\n",
+        "        self.attn_proj = nn.Sequential(\n",
+        "            nn.Linear(args[\"hidden_size\"], args[\"attn_size\"]),\n",
+        "            nn.Tanh(),\n",
+        "            nn.Linear(args[\"attn_size\"], 1, bias=False),\n",
+        "        )\n",
+        "  \n",
+        "  def reset_parameters(self):\n",
+        "        super(HeteroGNNWrapperConv, self).reset_parameters()\n",
+        "        if self.aggr == \"attn\":\n",
+        "            for layer in self.attn_proj.children():\n",
+        "                layer.reset_parameters()\n",
+        "\n",
+        "  def forward(self, node_features, edge_indices):\n",
+        "      message_type_emb = {}\n",
+        "      for message_key, message_type in edge_indices.items():\n",
+        "          src_type, edge_type, dst_type = message_key\n",
+        "          node_feature_src = node_features[src_type]\n",
+        "          node_feature_dst = node_features[dst_type]\n",
+        "          edge_index = edge_indices[message_key]\n",
+        "          message_type_emb[message_key] = self.convs[message_key](\n",
+        "              node_feature_src,\n",
+        "              node_feature_dst,\n",
+        "              edge_index,\n",
+        "          )\n",
+        "      node_emb = {dst: [] for _, _, dst in message_type_emb.keys()}\n",
+        "      mapping = {}\n",
+        "      for (src, edge_type, dst), item in message_type_emb.items():\n",
+        "          mapping[len(node_emb[dst])] = (src, edge_type, dst)\n",
+        "          node_emb[dst].append(item)\n",
+        "      self.mapping = mapping\n",
+        "      for node_type, embs in node_emb.items():\n",
+        "          if len(embs) == 1:\n",
+        "              node_emb[node_type] = embs[0]\n",
+        "          else:\n",
+        "              node_emb[node_type] = self.aggregate(embs)\n",
+        "      return node_emb\n",
+        "\n",
+        "  def aggregate(self, xs):\n",
+        "        N = xs[0].shape[0]  # Number of nodes for the given node type\n",
+        "        M = len(xs)  # Number of message types for the given node type\n",
+        "\n",
+        "        if self.aggr == \"mean\":\n",
+        "            xs = torch.stack(xs)\n",
+        "            out = torch.mean(xs, dim=0)\n",
+        "            return out\n",
+        "\n",
+        "        elif self.aggr == \"attn\":\n",
+        "            xs = torch.stack(xs, dim=0)\n",
+        "            s = self.attn_proj(xs).squeeze(-1)\n",
+        "            s = torch.mean(s, dim=-1)\n",
+        "            self.alpha = torch.softmax(s, dim=0).detach()\n",
+        "            out = self.alpha.reshape(-1, 1, 1) * xs\n",
+        "            out = torch.sum(out, dim=0)\n",
+        "            return out"
+      ],
+      "metadata": {
+        "id": "t6EMPMjUVy8b"
+      },
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def generate_convs(hetero_graph, conv, hidden_size, first_layer=False):\n",
+        "  \n",
+        "    convs = {}\n",
+        "    all_messages_types = hetero_graph.message_types\n",
+        "    for message_type in all_messages_types:\n",
+        "        if first_layer:\n",
+        "            in_channels_src = hetero_graph.num_node_features(message_type[0])\n",
+        "            in_channels_dst = hetero_graph.num_node_features(message_type[2])\n",
+        "        else:\n",
+        "            in_channels_src = hidden_size\n",
+        "            in_channels_dst = hidden_size\n",
+        "        out_channels = hidden_size\n",
+        "        convs[message_type] = conv(in_channels_src, in_channels_dst, out_channels)\n",
+        "    return convs"
+      ],
+      "metadata": {
+        "id": "p3_FmIQoUc9w"
+      },
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### HeteroGNN\n",
+        "\n",
+        "Make a simple `HeteroGNN` model which contains only two `HeteroGNNWrapperConv` layers. \n",
+        "\n",
+        "For the forward function in `HeteroGNN`, the model is going to be ran as: \n",
+        "\n",
+        "self.convs"
+      ],
+      "metadata": {
+        "id": "1TZfsBURb9pp"
+      }
     }
   ]
 }
